fix footer, wrap

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	min-height: 95vh;
 }
 #wrap {
-	padding-bottom: 2.5rem;
+	padding-bottom: 5.5rem;
 }
 
 .logo {
